Thu Jan 20 11:42:53 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        Merged changes from Remedy work branch.

        === start changelog ===

        Wed Jan 19 12:16:46 UTC 2011  Martin Corino  <mcorino@remedy.nl>

            * tao/TAO_Internal.cpp:
              Fixed problem with argument parsing.

        Fri Jan 14 17:19:46 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

                * utils/catior/Catior_i.cpp:
                  Added more vendor ids

                * utils/catior/README.catior:
                  Updated executable name

                * TAO_IDL/be/be_visitor_operation/operation_svs.cpp:
                  Reverted change below, wasn't complete

        Fri Jan 14 10:37:44 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

                * TAO_IDL/be/be_visitor_component/servant_svh.cpp:
                  Layout change

                * TAO_IDL/be/be_visitor_connector/facet_ami_exs.cpp:
                  Layout change to the generated code

                * TAO_IDL/be/be_visitor_operation/operation_svs.cpp:
                  Fixed race condition in generated servant, more fixes have to be made

        Mon Jan 10 12:39:17 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

                * etc/tao_portableserver.doxygen:
                  Doxygen improvement

        Mon Jan 10 09:10:17 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

                * etc/tao.doxygen:
                * etc/tao_anytypecode.doxygen:
                * etc/tao_av.doxygen:
                * etc/tao_compression.doxygen:
                * etc/tao_cosevent.doxygen:
                * etc/tao_cosnaming.doxygen:
                * etc/tao_cosnotification.doxygen:
                * etc/tao_costime.doxygen:
                * etc/tao_costrader.doxygen:
                * etc/tao_dynamicany.doxygen:
                * etc/tao_dynamicinterface.doxygen:
                * etc/tao_esf.doxygen:
                * etc/tao_ifr.doxygen: